plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'xyz.twooter'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    asciidoctorExt
}

repositories {
    mavenCentral()
}

dependencies {
    // === Spring Boot ===
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // === Security ===
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // === JWT ===
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // === DB ===
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    // === Redis ===
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.github.codemonstur:embedded-redis:1.4.3'

    // === Lombok ===
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // === Test ===
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // === RestDocs ===
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'io.rest-assured:spring-mock-mvc'
    testImplementation 'io.rest-assured:rest-assured'

    // === GCP ===
    implementation platform('com.google.cloud:libraries-bom:26.59.0')
    implementation 'com.google.cloud:google-cloud-storage'

    // === Flyway ===
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
}

ext {
    snippetsDir = file('build/generated-snippets')
}

test {
    useJUnitPlatform()
    outputs.dir snippetsDir
}

asciidoctor {
    configurations 'asciidoctorExt'

    sources {
        include("**/index.adoc")
    }
    baseDirFollowsSourceFile()

    inputs.dir snippetsDir
    dependsOn test
}

// Clear previous docs before generating new ones
asciidoctor.doFirst {
    delete file('src/main/resources/static/docs')
    delete file('docs')
}

// Copy RestDocs to both locations: static resources and project root
tasks.register('copyRestDocs', Copy) {
    dependsOn asciidoctor
    from file('build/docs/asciidoc')
    into file('src/main/resources/static/docs')
}

processResources.dependsOn('copySecret')

tasks.register('copySecret', Copy) {
    from './twooter-submodule'
    include "application*.yml"
    into 'src/main/resources'
}

// Ensure both copy tasks run when building
build {
    dependsOn copyRestDocs
}

// Add a bootJar dependency to ensure docs are generated before creating the final jar
bootJar {
    dependsOn copyRestDocs
}
